SERVER-34517 do not check for userId in cursors within sessions during getMore in sharded cluster